<resources>
    <string name="app_name">ANetHack</string>
    <string name="button_esc">ESC</string>
    <string name="play_mod_normal">normal</string>
    <string name="play_mod_discover">discover</string>
    <string name="player_select">Select save data to load</string>
    <string name="player_input">Input you player name</string>
    <string name="player_add">Click to start new game</string>
    <string name="player_name_too_long">Player %s name too long.</string>
    <string name="player_name_exists">Player %s already exists.</string>
    <string name="ext_cmd_select">Please select extended command.</string>
    <string name="message_history">Message history.</string>
    <string name="item_amount_select">Select the amount of %s</string>
    <string name="number_select">Please input the quantity.</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_all">Select all</string>
    <string name="dialog_clear_all">Clear all</string>
    <string name="pos_key_question">What do you want to do?</string>
    <string name="pos_key_travel">Travel</string>
    <string name="pos_key_run">Run</string>
    <string name="pos_key_look">Look</string>
    <string name="key_dot_status_desc">key dot status image view</string>
    <string name="menu_item_tile_desc">menu tile image</string>
    <string name="run_mode_run">Run</string>
    <string name="run_mode_walk">Walk</string>
    <string name="settings_title">Settings</string>
    <string name="activity_settings_title">SettingsActivity</string>
    <string name="activity_option_edit_title">OptionEditActivity</string>
    <string name="option_edit_save">Save</string>
    <string name="option_edit_cancel">Cancel</string>
    <string name="option_edit_title">Option</string>
    <string name="option_menu_save">Option Save</string>
    <string name="option_save_dialog_title">Save option</string>
    <string name="option_save_dialog_msg">Do you want to save the option file?</string>
    <string name="pride_id_title">Price Identification</string>
    <string name="pride_id_title_desc">Show price identification button.</string>
    <string name="pride_id_charisma_label">Charisma</string>
    <string name="pride_id_price_label">Price</string>
    <string name="pride_id_surcharge_label">Surcharge</string>
    <string name="pride_id_type_label">Item Type</string>
    <string name="pride_id_mode_label">Mode</string>
    <string name="price_id_surcharge_none">None</string>
    <string name="price_id_surcharge_tourist">Tourist below exp 15</string>
    <string name="price_id_surcharge_shirt">Wear a visible shirt</string>
    <string name="price_id_surcharge_cap">Wear a dunce cap</string>
    <string name="price_id_search">Search</string>
    <string name="price_id_mode_sell">Sell</string>
    <string name="price_id_mode_buy">Buy</string>
    <string name="price_id_mode_base">Base</string>
    <string name="price_id_invalid_json">Invalid json format.</string>
    <string name="pref_log_header">Logs</string>
    <string name="pref_log_dump">Dump log</string>
    <string name="pref_log_dump_summery">The log that records game state at the end of a game.</string>
    <string name="pref_log_dump_max_size">Dump log size</string>
    <string name="pref_log_error">Error log</string>
    <string name="pref_log_error_summery">Android crash log.</string>
    <string name="pref_sound_header">Sound</string>
    <string name="pref_sound_user">User sound</string>
    <string name="pref_sound_user_summery">Play user sound if permission granted.</string>
    <string name="pref_sound_internal">Internal sound</string>
    <string name="pref_sound_internal_summery">Play internal sound that NetHack provided.</string>
    <string name="pref_option_header">Config</string>
    <string name="pref_option_edit">Edit config file</string>
    <string name="pref_price_id_header">Price Identification</string>
    <string name="pref_price_id_enable">Enable price identification</string>
    <string name="pref_menu_header">Menu</string>
    <string name="pref_menu_type">Menu type</string>
    <string name="pref_menu_type_dialog">Dialog</string>
    <string name="pref_menu_type_operate">Operation</string>
    <string name="pref_message_header">Message</string>
    <string name="pref_message_history_size">Size of message history</string>
    <string name="pref_map_header">Map</string>
    <string name="pref_map_tileset">Tileset</string>
    <string name="pref_map_tile_default">Default</string>
    <string name="pref_map_tile_nevanda">Nevanda</string>
    <string name="pref_map_tile_pixelhack">PixelHack</string>
    <string name="pref_map_tile_ascii">Ascii</string>
    <string name="pref_map_indicator">Show indicator</string>
    <string name="pref_map_last_travel_indicator">Show last travel indicator</string>
    <string name="pref_map_indicator_desc">Show map symbol indicator.</string>
    <string name="pref_map_indicator_symbols">Indicator symbols</string>
    <string name="pref_map_walk_range">Walk range</string>
    <string name="pref_map_walk_range_desc">When the player moves beyond the range(%), the screen will move along with it.</string>
    <string name="pref_map_travel_after_panned">Travel after map panned</string>
    <string name="pref_map_travel_after_panned_desc">Travel when you touch the map, if the map has been translated and player not in walk range.</string>
    <string name="pref_keyboard_header">Keyboard</string>
    <string name="pref_keyboard_vibrate">Keyboard vibration</string>
    <string name="pref_keyboard_command_panel">Custom wheel actions</string>
    <string name="pref_command_bar">Bottom bar</string>
    <string name="pref_command_bar_summary">Visually adjust bottom bar rows, per-row visible limit, buttons and icons. Row 1 is the bottommost row.</string>
    <string name="activity_command_bar_edit_title">Edit bottom bar</string>
    <string name="cmd_bar_add_row">Add row</string>
    <string name="cmd_bar_reset">Reset to default</string>
    <string name="cmd_bar_reset_confirm">Reset the bottom bar to the default buttons?</string>
    <string name="cmd_bar_row_title">Row %1$d</string>
    <string name="cmd_bar_visible_limit">Limit</string>
    <string name="cmd_bar_drag_here_delete">Drag here to delete</string>
    <string name="cmd_bar_row_count">%1$d/%2$d</string>
    <string name="cmd_bar_delete_row">Delete row</string>
    <string name="cmd_bar_delete_row_confirm">Delete row %1$d and all its buttons?</string>
    <string name="cmd_bar_add_button">Add button</string>
    <string name="cmd_bar_edit_button">Edit button</string>
    <string name="cmd_bar_command">Command</string>
    <string name="cmd_bar_label">Label</string>
    <string name="cmd_bar_label_hint">Empty = default name, no spaces</string>
    <string name="cmd_bar_icon">Icon</string>
    <string name="cmd_bar_delete">Delete</string>
    <string name="cmd_bar_command_required">Command must not be empty</string>
    <string name="cmd_bar_max_rows">At most %1$d rows</string>
    <string name="cmd_bar_max_buttons">At most %1$d buttons per row</string>
    <string name="cmd_bar_row_enabled">Row enabled</string>
    <string name="cmd_bar_export_code">Export code</string>
    <string name="cmd_bar_import_code">Import code</string>
    <string name="cmd_bar_import_hint">Paste the config code here</string>
    <string name="cmd_bar_code_copy">Copy</string>
    <string name="cmd_bar_code_copied">Config code copied to clipboard</string>
    <string name="cmd_bar_code_invalid">Invalid config code</string>
    <string name="cmd_bar_code_too_new">Config code requires a newer app version (v%1$d)</string>
    <string name="cmd_bar_import_confirm">Import and overwrite the current bottom bar layout?</string>
    <string name="pref_keyboard_command_panel_summary">Adds a Custom category to the action wheel. Separate actions with spaces and pages with line breaks. Use command|label for custom labels. Keys: ^p = Ctrl-P, M-p = Alt-P (uppercase M only, case matters), esc = Escape; other characters run as a key sequence in order and may mix in ^x/M-x keys, e.g. 10s^p.</string>
    <string name="pref_keyboard_command_panel_default"></string>
    <string name="pref_action_wheel_enabled">Action wheel</string>
    <string name="pref_action_wheel_enabled_summary">Tap your character on the map to open the radial action wheel.</string>
    <string name="pref_action_wheel_opacity">Action wheel panel opacity</string>
    <string name="pref_action_wheel_opacity_summary">Lower values make the wheel panels more transparent while keeping icons and text clear.</string>
    <string name="touch_category_combat">Combat</string>
    <string name="touch_category_items">Items</string>
    <string name="touch_category_explore">Explore</string>
    <string name="touch_category_info">Info</string>
    <string name="touch_category_system">System</string>
    <string name="touch_category_custom">Custom</string>
    <plurals name="touch_category_action_count">
        <item quantity="one">%d action</item>
        <item quantity="other">%d actions</item>
    </plurals>
    <string name="touch_category_description">%1$s actions, %2$d available</string>
    <string name="touch_action_apply">Apply</string>
    <string name="touch_action_fire">Fire</string>
    <string name="touch_action_throw">Throw</string>
    <string name="touch_action_zap">Zap</string>
    <string name="touch_action_cast">Cast</string>
    <string name="touch_action_kick">Kick</string>
    <string name="touch_action_force_fight">Force fight</string>
    <string name="touch_action_wield">Wield</string>
    <string name="touch_action_quiver">Quiver</string>
    <string name="touch_action_swap">Swap weapon</string>
    <string name="touch_action_two_weapon">Two-weapon</string>
    <string name="touch_action_enhance">Enhance</string>
    <string name="touch_action_turn_undead">Turn undead</string>
    <string name="touch_action_monster_ability">Monster ability</string>
    <string name="touch_action_ride">Ride</string>
    <string name="touch_action_inventory_type">Inventory type</string>
    <string name="touch_action_pickup">Pick up</string>
    <string name="touch_action_drop">Drop</string>
    <string name="touch_action_drop_type">Drop types</string>
    <string name="touch_action_eat">Eat</string>
    <string name="touch_action_quaff">Quaff</string>
    <string name="touch_action_read">Read</string>
    <string name="touch_action_wear">Wear</string>
    <string name="touch_action_take_off">Take off</string>
    <string name="touch_action_take_off_all">Take off all</string>
    <string name="touch_action_put_on">Put on</string>
    <string name="touch_action_remove">Remove</string>
    <string name="touch_action_loot">Loot</string>
    <string name="touch_action_dip">Dip</string>
    <string name="touch_action_invoke">Invoke</string>
    <string name="touch_action_rub">Rub</string>
    <string name="touch_action_tip">Tip container</string>
    <string name="touch_action_pay">Pay</string>
    <string name="touch_action_adjust">Adjust letters</string>
    <string name="touch_action_call">Call/name</string>
    <string name="touch_action_autopickup">Autopickup</string>
    <string name="touch_action_permanent_inventory">Permanent inventory</string>
    <string name="touch_action_see_all_equipment">All equipment</string>
    <string name="touch_action_see_weapon">Weapon status</string>
    <string name="touch_action_see_armor">Armor status</string>
    <string name="touch_action_see_rings">Ring status</string>
    <string name="touch_action_see_amulet">Amulet status</string>
    <string name="touch_action_see_tools">Tool status</string>
    <string name="touch_action_show_gold">Show gold</string>
    <string name="touch_action_show_spells">Show spells</string>
    <string name="touch_action_open">Open</string>
    <string name="touch_action_close">Close</string>
</resources>